[package]
name = "xodo-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.21"
substring = "1.4.5"
tiny_http = "0.12.0"
